# software-engineering-fall-2024-3-python-package-python-package-exercise

./: .gitignore  .pypirc  :  BadFortune.txt  FortuneCookie.py  GoodFortune.txt  LICENSE  MANIFEST.in  PipFile  Pipfile  README.md  README_EXAMPLE.md  __init__.py  app.py  b64.py  caesar.py  calculator.py  check_answer.py  crypto.py  date.py  example.py  exampleProgram.py  example_program.py  example_usage.ipynb  example_usage.py  excuses_en.py  excuses_es.py  function2.py  generate_riddle.py  getByAuthor.py  getMultipleFortunes.py  instructions.md  morse.py  pet.py  physicalexercise.py  provide_hint.py  pyexcuses.py  pyproject.toml  pytest.ini  random_fortune.py  (+26 more)
.github/: python-app.yml
.github/workflows/: Pipfile  build-and-test.yml  build-test.yml  build.yaml  ci.yml  event-logger.yml  publish.yml  python-app.yml  python-package.yml  python-tests.yml  requirements.txt  riddle_package.yml  test_four.yaml  test_one.yaml  test_three.yaml  (+2 more)
Fortune/: BadFortune.txt
codebreak/: __init__.py  eye_exercises.py  mental_exercises.py  stretches.py
codeshakespeare/: shakespeare.py  utils.py
datehelper/: __init__.py  add_days.py  core.py  instructions.md  main.py
funky_fortune/: main.py
funtasks/: __main__.py  safe.py  tasks.py
myenv/: pyvenv.cfg
oracle/: cli.py  eight_ball.py  fortune_cookie.py  petting_zoo.py  vibe_check.py
package/: FortuneCookie.py  GoodFortune.txt  __init__.py
pet/: __init__.py  pet.py
pyanimals/: main.py
pyexcuses/: __init__.py  exc.py  excuses_en.py  excuses_es.py  pyexcuses.py  solutions_en.py  solutions_es.py
pymagotchi/: __main__.py  constants.py  names.py  pet.py
pyquotes/: __init__.py  list_movies.py  quote_from_category.py  quote_of_the_day.py  quotes.py  random_quote.py
pytextalterations/: __init__.py  capitalize_sentences.py  most_frequent_words.py  remove.py  sentence_count.py
src/: __init__.py  check_answer.py  generate_riddle.py  helper.py  main.py  pet.py  provide_hint.py  random_fortune.py  read_file.py  submit_riddle.py
test/: test_fortune.py  test_getMultipleFortunes.py  test_multiple.py  test_pytarot.py
test_env/: pyvenv.cfg
tests/: __init__.py  datehelper_py_test.py  datehelper_pytest.py  get_noise_test.py  input_parse_test.py  moo_test.py  remove_test.py  removepunctuation_test.py  save.py  test.py  test_capitalize_sentences.py  test_clear_screen.py  test_code.py  test_codeshakespeare.py  test_eight_ball.py  test_eye_exercises.py  test_fortune.py  test_fortune_cookie.py  test_functions.py  test_get_animal.py  test_get_multilingual_excuse_or_solution.py  test_get_random_message.py  test_hello_world.py  test_integration.py  test_list_available_options.py  test_list_movies.py  test_lucky_number.py  test_magic_8ball.py  test_magic_eight.py  test_main.py  test_mental_exercises.py  test_most_frequent_words.py  test_move.py  test_one.py  test_pet.py  test_petting_zoo.py  test_pyanimals.py  test_quote_of_the_day.py  test_race.py  test_randMessage.py  (+16 more)
workflows/: event-logger.yml
(+85 files in other folders)
